--- a/24AMPag/appsettings.json
+++ b/24AMPag/appsettings.json
@@ -9,7 +9,7 @@
     "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "DefaultConnection": " Data Source = DESKTOP-QSAR98D\\MSSQLSERVER01; initial catalog = Proyecto24AM; Integrated Security = True"
+    "DefaultConnection": " Data Source = LAPTOP-OH2KCBPB; initial catalog = Proyecto24AM; Integrated Security = True"
 
   }
 }
